Feature/add test step to ci (#3)
* Add workflow for build and run application

* Remove thread application main method

* Update ci configuration file for setting new run configuration

* Add java fx path

* Fix ci in java fx configuration

* Add test for white board javafx application

* Remove test step from CI action job